# llmfit

./: .gitignore  Cargo.toml
apps/web/frontend/: index.html
apps/web/frontend/src/: App.tsx
apps/web/frontend/src/components/filter-panel/: index.tsx
apps/web/frontend/src/components/layout/: index.tsx
apps/web/frontend/src/components/model-table/: index.tsx
apps/web/frontend/src/components/ui/: table.tsx
apps/web/frontend/src/hooks/: useTranslation.ts
apps/web/frontend/src/lib/: api.ts
apps/web/frontend/src/pages/home/: index.tsx
apps/web/frontend/src/pages/settings/: index.tsx
crates/llmfit-core/src/: hardware.rs
crates/llmfit-desktop/: tauri.conf.json
crates/llmfit-desktop/ui/: styles.css
desktop-app/: build.ps1  create-icon.ps1  launcher.js
desktop-app/src/: index.html
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/src/: main.rs
llmfit-desktop/: Cargo.toml
llmfit-desktop/src/: main.rs
llmfit-desktop/ui/: app.js  index.html
web-ui/: .gitignore
web-ui/backend/: llmfit-backend.spec  main.py  requirements.txt
web-ui/backend/app/: main.py
web-ui/backend/app/api/: deps.py  v1.py
web-ui/backend/app/core/: config.py
web-ui/backend/app/models/: schemas.py
web-ui/backend/app/services/: fit.py  hardware.py  models.py
web-ui/frontend/: package-lock.json  package.json
web-ui/frontend/src/: App.tsx
web-ui/frontend/src/components/hardware-cards/: index.tsx
web-ui/frontend/src/components/layout/: index.tsx
web-ui/frontend/src/lib/: i18n.ts
web-ui/frontend/src/pages/home/: index.tsx
web-ui/frontend/src/store/: index.ts
