[package]
name = "llmfit-desktop"
version.workspace = true
edition = "2024"
authors = ["axjns"]
description = "LLMFit Desktop Application — LLM Hardware Fitting"
license = "MIT"
repository = "https://github.com/AlexsJones/llmfit"
default-run = "llmfit-desktop"

[package.metadata]
# Required for tauri-build

[[bin]]
name = "llmfit-desktop"
path = "src/main.rs"

[dependencies]
llmfit-core = { path = "../llmfit-core" }
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
